tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_turbofish_turbofish_in_constructor/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type i32, found type Field
  ┌─ src/main.nr:8:33
  │
8 │         let _ = Foo::<i32> { x: x };
  │                                 -
  │

Aborting due to 1 previous error
